fix contact page display on small mobile.

--- a/components/css/contact.css
+++ b/components/css/contact.css
@@ -1,13 +1,8 @@
 
-.contact-page {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
 .contact-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(368px, 1fr));
+  /* grid-template-columns: repeat(auto-fit, minmax(368px, 1fr)); */
   gap: 2.5rem;
   margin-top: 2rem;
 }
