--- a/components/css/global.css
+++ b/components/css/global.css
@@ -326,7 +326,7 @@ h2:after {
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 2rem;
   margin-bottom: 3rem;
 }
